# gamedev_withSFML

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Aircraft.hpp  Entity.hpp  ResourceHolder.hpp  ResourceHolder.inl  SceneNode.hpp  blade.h  define.h
src/: Aircraft.cpp  CMakeLists.txt  Entyty.cpp  SceneNode.cpp  blade.cpp
